--- a/week3.ipynb
+++ b/week3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOk0I3yMp3InYyHyI+MDt/O",
+      "authorship_tag": "ABX9TyPn0I+cPzm5vjI8qzIAZXlq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "XlMdu_gE-iKy"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "EGJ3I9LP-jWK",
         "outputId": "c4e39f9f-d71d-42bc-eca1-928844dc3198"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -118,6 +118,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **TUGAS PRAKTIKUM**"
+      ],
+      "metadata": {
+        "id": "5VvRk8Yb7bjN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Implementasikan inverse citra pada Google Colaboratory menggunakan formula yang terdapat pada bagian Ulasan Teori, sehingga menghasilkan keluaran seperti berikut:\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pelHMqvp7kbD"
+      }
     },
     {
       "cell_type": "markdown",
@@ -152,7 +172,7 @@
         "id": "Db1h4N3eAG4H",
         "outputId": "80f6e4de-7423-4cf6-d883-aa537a754066"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,6 +185,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Implementasikan transformasi contrast pada Google Colaboratory menggunakan formula yang terdapat pada bagian Ulasan Teori untuk kontras, sehingga menghasilkan keluaran seperti berikut"
+      ],
+      "metadata": {
+        "id": "GikbK8728YR6"
+      }
     },
     {
       "cell_type": "markdown",
@@ -202,8 +231,7 @@
         "final_frame = cv.hconcat([image, adjusted_image])\n",
         "\n",
         "# Tampilkan hasil\n",
-        "cv2_imshow(final_frame)\n",
-        ""
+        "cv2_imshow(final_frame)\n"
       ],
       "metadata": {
         "colab": {
@@ -213,7 +241,7 @@
         "id": "kRU2caX6BdN8",
         "outputId": "ef7e0f10-2b41-4ea8-99dd-7599e3933435"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -234,6 +262,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Implementasikan transformasi logarithmic brightness pada Google Colaboratory menggunakan formula yang terdapat pada bagian Ulasan Teori untuk transformasi log, sehingga menghasilkan keluaran seperti berikut:"
+      ],
+      "metadata": {
+        "id": "2lTu_Yvd8fdz"
+      }
     },
     {
       "source": [
@@ -280,7 +317,7 @@
         "id": "PGJLPvd9FIVU",
         "outputId": "bef6f8bb-a8a9-4110-864e-05092f0da0f5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -300,6 +337,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Implementasikan transformasi grayscale menggunakan metode averaging, lightness,dan luminance pada Google Colaboratory menggunakan formula yang terdapat pada bagian Ulasan Teori, sehingga menghasilkan keluaran seperti berikut:\n"
+      ],
+      "metadata": {
+        "id": "YaeQqGsM8n5c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### a. Averaging\n"
+      ],
+      "metadata": {
+        "id": "KWJz2fov81m3"
+      }
     },
     {
       "cell_type": "code",
@@ -343,7 +398,7 @@
         "id": "-5GbeTnFGhxA",
         "outputId": "4c3afb4d-bcad-4430-d815-87769a5909f0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -356,6 +411,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### b. Lightness"
+      ],
+      "metadata": {
+        "id": "HumQ_T888846"
+      }
     },
     {
       "cell_type": "code",
@@ -400,7 +464,7 @@
         "id": "Ucb5vgA-IGKi",
         "outputId": "99af44c4-3837-4822-8798-80fd74338457"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -413,6 +477,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### c. Luminance"
+      ],
+      "metadata": {
+        "id": "3pp1H97e9Cha"
+      }
     },
     {
       "cell_type": "code",
@@ -470,7 +543,7 @@
         "id": "03Dc1q_8KDc-",
         "outputId": "e41c61d3-5ac9-4022-a74f-5c197ff46f00"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -483,6 +556,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Tampilkanlah warna tertentu pada citra, dan ubah warna lain menjadi grayscale. Misal,tampilkan warna biru pada citra masukan dan ubah bagian lain yang tidak berwarna biru menjadi grayscale seperti pada contoh berikut"
+      ],
+      "metadata": {
+        "id": "CUXrcxFS9JRP"
+      }
     },
     {
       "cell_type": "code",
@@ -552,7 +634,7 @@
         "id": "vFSlOvboKqaL",
         "outputId": "8ddcc17d-95d5-462a-a7fc-e8343a80ed70"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
